# ghost_launcher

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RETROSPECTIVE.md  SPEC.md  index.html  package-lock.json  package.json  playwright.tauri.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: encoding-reviewer.md  ipc-boundary-checker.md  security-reviewer.md  sqlite-tuning.md  ux-reviewer.md
.github/workflows/: ci-build.yml  release.yml
crates/ghost-meta/: Cargo.toml
crates/ghost-meta/src/: descript.rs  ghost.rs  lib.rs  testutil.rs  thumbnail.rs
docs/: app-shell-state-implementation-plan.md  cache-spec.md  locale-customization.md  responsibility-separation-review.md  ui-guidelines.md
e2e/: CLAUDE.md  ghost-list.e2e.ts  i18n.e2e.ts
e2e/helpers/: harness.ts  ui.ts
scripts/: check-ui-guidelines.mjs  check-ui-guidelines.test.mjs
scripts/hooks/: check-rust-clippy.sh  check-ts-types.sh  warn-generated-edit.sh  warn-migration-edit.sh  warn-protected-file-edit.sh
src/: App.test.tsx  App.tsx  CLAUDE.md  index.css  main.tsx
src-tauri/: 2  CLAUDE.md  Cargo.toml  check_out.txt  claude-6058-cwd  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db.rs  ghost.rs  locale.rs  mod.rs  ssp.rs
src-tauri/src/commands/ghost/: fingerprint.rs  mod.rs  path_utils.rs  scan.rs  store.rs  types.rs
src-tauri/src/utils/: descript.rs  mod.rs
src/components/: AppHeader.test.tsx  AppHeader.tsx  GhostCard.test.tsx  GhostCard.tsx  GhostContent.tsx  GhostList.test.tsx  GhostList.tsx  SearchBox.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SkeletonCard.tsx
src/hooks/: useAppShellState.test.ts  useAppShellState.ts  (+8 more)
workspace/: ci_error.md  feedback_plan.md  next_action.md  next_action_plan.md  plan.md  research.md  retrospective.md  review.md
(+38 files in other folders)
