[package]
name = "ghost-launcher"
version = "0.1.0"
description = "A ghost launcher for SSP (Ukagaka)"
authors = ["you"]
edition = "2021"

[lib]
name = "ghost_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
